@@ -1,3 +1,8 @@
+Mon Jan 12 01:09:31 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/Makefile: Remake all references and redo all tests when
+	Makefile changes; A failed test should be redone when retrying.
+
 Sun Jan 11 22:48:00 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
 
 	* m_cpuctrl.c,expr.c,help_eval.c: Minor source cleanup.
